--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,72 @@
     background-color: #29292c !important;
     transform: scale(1.1) translateY(-4px);
 }
+.btn {
+    margin-top: 20px;
+    background-color: transparent !important;
+    border-radius: 2px;
+    border: solid;
+    font-size: 18px;
+    letter-spacing: 4px ;
+}
+.btn:hover {
+    border-color: deepskyblue;
+    -webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,.6) 30%, #000 50%, rgba(0,0,0,.6) 70%);
+    -webkit-mask-size: 200%;
+    animation: shine 2s infinite;
+}
+
+@-webkit-keyframes shine {
+    from {
+        -webkit-mask-position: 150%;
+    }
+
+    to {
+        -webkit-mask-position: -50%;
+    }
+}
+
+.ole,.snhu:hover {
+    -webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,.6) 30%, #000 50%, rgba(0,0,0,.6) 70%);
+    -webkit-mask-size: 200%;
+    animation: shine 2s infinite;
+}
+
+@-webkit-keyframes shine {
+    from {
+        -webkit-mask-position: 150%;
+    }
+
+    to {
+        -webkit-mask-position: -50%;
+    }
+}
+
+.header:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    display: inline-block;
+    height: 1em;
+    width: 100%;
+    border-bottom: 1px solid;
+    margin-top: 10px;
+    opacity: 0;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, transform 0.35s;
+    -webkit-transform: scale(0,1);
+    transform: scale(0,1);
+}
+
+.header:hover:after {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+.header {
+    text-align: center;
+    font-size: 20px;
+}
 
 .navbar-brand {
     letter-spacing: 4px;
@@ -16,10 +82,6 @@
 p {
     letter-spacing: 3px;
     text-align: left;
-}
-
-.header {
-    text-align: center;
 }
 
 ul {
@@ -85,7 +147,6 @@ div.etc-tag {
     text-align: left;
 }
 
-
 .snhu, .ole {
     border-radius: 50%;
     width: 6%;
@@ -96,7 +157,6 @@ div.etc-tag {
 .navbar {
     z-index: 1;
 }
-
 /*Terminal*/
 
 .window {
