--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+    overflow-x: hidden;
+}
 #home {
     font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: 2em;
@@ -56,7 +59,6 @@
     left: 0;
     display: inline-block;
     height: 1em;
-    width: 100%;
     border-bottom: 1px solid;
     margin-top: 10px;
     opacity: 0;
